<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView
        android:id="@+id/receip_card"
        xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_margin="15dp"
    android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <TextView
            android:id="@+id/tv_recipe"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="30sp"
            android:text="Mohamed Tony"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

