<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bakingapp.activity.StepDetailActivity">

    <FrameLayout
        android:id="@+id/head_container"
        android:layout_width="match_parent"

        android:layout_height="600dp"

        android:layout_above="@+id/next">

    </FrameLayout>

    <Button
        android:text="prev"
        android:id="@+id/prev"
        android:onClick="prev"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="11dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="next"
        android:id="@+id/next"
        android:onClick="next"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />




</RelativeLayout>

