<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


   <!-- here is the medai player-->
    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/video_view"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="250dp"/>


    <ImageView

        android:scaleType="fitXY"
        android:src="@drawable/food"
        android:id="@+id/img_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="250dp"/>


    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:id="@+id/step_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>